# smart-is-default

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
smartisdefault/: Cargo.toml
smartisdefault-tests/: Cargo.toml
smartisdefault-tests/src/: lib.rs
smartisdefault-tests/tests/: auto_serde.rs  basic.rs  enums.rs  generics.rs  nested.rs  no_is_default.rs  private_helpers.rs  serde.rs  skip_field.rs  tuple_structs.rs  unit_structs.rs
smartisdefault/src/: lib.rs
